* Added new visual Schedule output class, tetris style in SVG format